# ChangeLog for net-libs/libpcap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.188 2013/12/16 02:40:11 radhermit Exp $

*libpcap-1.5.2 (16 Dec 2013)

  16 Dec 2013; Tim Harder <radhermit@gentoo.org> +libpcap-1.5.2.ebuild:
  Version bump.

  01 Dec 2013; Fabian Groffen <grobian@gentoo.org> libpcap-1.5.1.ebuild:
  Fix building on Darwin with Prefix toolchain

*libpcap-1.5.1 (28 Nov 2013)

  28 Nov 2013; Tim Harder <radhermit@gentoo.org> +libpcap-1.5.1.ebuild:
  Version bump, add dbus use flag.

  27 Jul 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove duplicate description.

  09 May 2013; Jeroen Roovers <jer@gentoo.org> libpcap-1.4.0.ebuild:
  Do not install libpcap.a when USE=-static-libs (readd the command that
  "achieved" this in 1.3.0 (bug #469146 by Alphat-PC).

  09 May 2013; Jeroen Roovers <jer@gentoo.org>
  -files/libpcap-1.1-cross-linux.patch,
  -files/libpcap-1.1.1-ignore-ENODEV.patch, -libpcap-1.1.1-r1.ebuild:
  Old.

*libpcap-1.4.0 (09 May 2013)

  09 May 2013; Jeroen Roovers <jer@gentoo.org> +libpcap-1.4.0.ebuild:
  Version bump.

  20 Feb 2013; Zac Medico <zmedico@gentoo.org> libpcap-1.3.0-r1.ebuild:
  Add ~arm-linux keyword.

  08 Feb 2013; Rick Farina <zerochaos@gentoo.org>
  -files/libpcap-1.3.0-libnl3.patch, -libpcap-1.3.0-r2.ebuild:
  after further testing, that was a terrible idea

*libpcap-1.3.0-r2 (08 Feb 2013)

  08 Feb 2013; Rick Farina <zerochaos@gentoo.org>
  +files/libpcap-1.3.0-libnl3.patch, +libpcap-1.3.0-r2.ebuild:
  make libpcap link to libnl:3

*libpcap-1.3.0-r1 (18 Jan 2013)

  18 Jan 2013; Lars Wendler <polynomial-c@gentoo.org> -libpcap-1.3.0.ebuild,
  +libpcap-1.3.0-r1.ebuild,
  +files/libpcap-1.3.0-fix-systems-without-ipv6-support.patch:
  non-maintainer commit: Added a patch to fix libpcap on systems without ipv6
  support with kind permission from zerochaos (bug #452832). Revbumped and
  added straight to stable.
