@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=bluetooth? ( net-wireless/bluez ) dbus? ( sys-apps/dbus ) netlink? ( dev-libs/libnl ) canusb? ( virtual/libusb ) sys-devel/flex virtual/pkgconfig virtual/yacc !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=A system-independent library for user-level network packet capture
+EAPI=5
+HOMEPAGE=http://www.tcpdump.org/
+IUSE=bluetooth dbus ipv6 netlink static-libs canusb
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=BSD
+RDEPEND=bluetooth? ( net-wireless/bluez ) dbus? ( sys-apps/dbus ) netlink? ( dev-libs/libnl ) canusb? ( virtual/libusb )
+SLOT=0
+SRC_URI=http://www.tcpdump.org/release/libpcap-1.5.3.tar.gz http://www.jp.tcpdump.org/release/libpcap-1.5.3.tar.gz
+_eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	eutils	40081e8c7e7f7c4f9db349a1d6d52925	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=074129735139d9d2a29fc3a4457c1703
