@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/libpcap
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.188 2013/12/16 02:40:11 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libpcap/ChangeLog,v 1.189 2014/01/22 09:13:54 radhermit Exp $
+
+*libpcap-1.5.3 (22 Jan 2014)
+
+  22 Jan 2014; Tim Harder <radhermit@gentoo.org> +libpcap-1.5.3.ebuild:
+  Version bump.
 
 *libpcap-1.5.2 (16 Dec 2013)
 
